--- a/style.css
+++ b/style.css
@@ -64,6 +64,17 @@ cursor: pointer;
 }
 .card .currency-converter .submit:hover{
     box-shadow: 0.2px 0 10px #a1ac36;
-
    
+}
+#result{
+    font-size: 1.2rem;
+    font-weight: bold;
+    animation:fadeInTop 1s forwards ;
+}
+@keyframes fadeInTop {
+    from {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    to { opacity: 1 }
 }
